fixes layout issues with side nav bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,10 +35,10 @@ body {
 }
 
 .go-right {
-  float: right;
+  text-align: right;
 }
 
-.sidelist {
+.sidelist li {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -49,6 +49,13 @@ body {
   float: left;
   width: 160px;
   padding: 8px;
+  display: inline;
+}
+
+.container {
+  display: block;
+  position: absolute;
+  left: 165px;
 }
 
 .sidenav-ul {
